--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile project(':framework')
+    compile files('libs/fastjson-1.2.8.jar')
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
-    testCompile 'junit:junit:4.12'
-    compile project(':framework')
     compile 'com.jakewharton:butterknife:8.4.0'
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.hyphenate:hyphenate-sdk:3.2.3'
-    compile files('libs/fastjson-1.2.8.jar')
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    testCompile 'junit:junit:4.12'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.journeyapps:zxing-android-embedded:3.4.0'
 }
