重构命令窗口

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,8 +85,8 @@
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
             tools:replace="screenOrientation" />
-
         <activity android:name=".cmd.VideoCallActivity" />
+        <activity android:name=".cmd.CmdActivity"></activity>
     </application>
 
 </manifest>
