--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 23
@@ -33,7 +34,9 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.hyphenate:hyphenate-sdk:3.2.3'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'com.journeyapps:zxing-android-embedded:3.4.0'
+    compile 'org.greenrobot:greendao:3.2.0'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'com.journeyapps:zxing-android-embedded:3.4.0'
+    compile 'com.novaapps:FloatingActionMenu:1.0'
 }
