--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.SplashActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -85,8 +86,12 @@
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
             tools:replace="screenOrientation" />
-        <activity android:name=".cmd.VideoCallActivity" />
-        <activity android:name=".cmd.CmdActivity"></activity>
+        <activity
+            android:name=".cmd.VideoCallActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".cmd.CmdActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
